objects/SetupEvents__e.object
<CustomObject>
    <description>SFDC-2865 Platform events to setup meetings/events with correct information in - AccountId, Privacy Level</description>
    <fields>
        <fullName>EventId__c</fullName>
        <description>SFDC-2865 Capture event/meeting record id</description>
        <label>Event Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SetMeetingShare__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is true when apex sharing of related meeting note with Event Attendee users needs to adjusted.</description>
        <label>SetMeetingShare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SetPrivacyLevel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is checked if the AccountId or PrivacyLevel__c needs to be adjusted on Event.</description>
        <label>SetPrivacyLevel</label>
        <type>Checkbox</type>
    </fields>
    <label>SetupEvents</label>
    <pluralLabel>SetupEvents</pluralLabel>
</CustomObject>